--- a/store/templates/store/home.html
+++ b/store/templates/store/home.html
@@ -1,6 +1,133 @@
 {% extends 'store/main.html' %}
 {% load static %}
 {% block content %}
-<h5>Kezdőlap</h5>
+
+<body class="test">
+    <h1 class="cst">Csapatagok</h1>
+    <div class="tartó">
+        <div class="product">
+            <div class="product-card">
+                <h2 class="name">Miniszteri biztos</h2>
+                <a class="popup-btn">Kiss Csongor</a>
+                <img src="static\images\kcsongor.jpg" class="product-img" alt="adam">
+            </div>
+            <div class="popup-view">
+                <div class="popup-card">
+                    <a><i class="fas fa-times close-btn"></i></a>
+                    <div class="product-img">
+                        <img src="static\images\kcsongor.jpg" alt="">
+                    </div>
+                    <div class="info">
+                        <h2>Kiss Csongor<br><span>Királyok</span></h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat aperiam cupiditate delectus nesciunt vero sapiente facilis optio numquam omnis inventore autem alias, maxime quibusdam libero at eius voluptate. Neque, obcaecati.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="product">
+            <div class="product-card">
+                <h2 class="name">Miniszteri biztos</h2>
+                <a class="popup-btn">Smauzer Dávid</a>
+                <img src="static\images\smauzer.jpg" class="product-img" alt="adam">
+            </div>
+            <div class="popup-view">
+                <div class="popup-card">
+                    <a><i class="fas fa-times close-btn"></i></a>
+                    <div class="product-img">
+                        <img src="static\images\smauzer.jpg" alt="">
+                    </div>
+                    <div class="info">
+                        <h2>Smauzer Dávid<br><span>Királyok</span></h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat aperiam cupiditate delectus nesciunt vero sapiente facilis optio numquam omnis inventore autem alias, maxime quibusdam libero at eius voluptate. Neque, obcaecati.</p>
+                        
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="product">
+            <div class="product-card">
+                <h2 class="name">Miniszteri biztos</h2>
+                <a class="popup-btn">Csete Ádám</a>
+                <img src="static\images\adam.jpg" class="product-img" alt="adam">
+            </div>
+            <div class="popup-view">
+                <div class="popup-card">
+                    <a><i class="fas fa-times close-btn"></i></a>
+                    <div class="product-img">
+                        <img src="static\images\adam.jpg" alt="">
+                    </div>
+                    <div class="info">
+                        <h2>Csete Ádám<br><span>Királyok</span></h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat aperiam cupiditate delectus nesciunt vero sapiente facilis optio numquam omnis inventore autem alias, maxime quibusdam libero at eius voluptate. Neque, obcaecati.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="product">
+            <div class="product-card">
+                <h2 class="name">Miniszteri biztos</h2>
+                <a class="popup-btn">Baán Gyula</a>
+                <img src="static\images\gyula.jpg" class="product-img" alt="adam">
+            </div>
+            <div class="popup-view">
+                <div class="popup-card">
+                    <a><i class="fas fa-times close-btn"></i></a>
+                    <div class="product-img">
+                        <img src="static\images\gyula.jpg" alt="">
+                    </div>
+                    <div class="info">
+                        <h2>Baán Gyula<br><span>Királyok</span></h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat aperiam cupiditate delectus nesciunt vero sapiente facilis optio numquam omnis inventore autem alias, maxime quibusdam libero at eius voluptate. Neque, obcaecati.</p>
+                    
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="product">
+            <div class="product-card">
+                <h2 class="name">Miniszteri biztos</h2>
+                <a class="popup-btn">Szövérfi Csongor</a>
+                <img src="static\images\szcsongor.jpg" class="product-img" alt="adam">
+            </div>
+            <div class="popup-view">
+                <div class="popup-card">
+                    <a><i class="fas fa-times close-btn"></i></a>
+                    <div class="product-img">
+                        <img src="static\images\szcsongor.jpg" alt="">
+                    </div>
+                    <div class="info">
+                        <h2>Szövérfi Csongor<br><span>Királyok</span></h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat aperiam cupiditate delectus nesciunt vero sapiente facilis optio numquam omnis inventore autem alias, maxime quibusdam libero at eius voluptate. Neque, obcaecati.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    
+
+    <script type="text/javascript">
+        var popupViews = document.querySelectorAll('.popup-view')
+        var popupBtns = document.querySelectorAll('.popup-btn')
+        var closeBtns = document.querySelectorAll('.close-btn')
+
+        var popup = function(popupClick){
+            popupViews[popupClick].classList.add('active');
+        }
+
+        popupBtns.forEach((popupBtn, i) => {
+            popupBtn.addEventListener("click", () => {
+                popup(i);
+            });
+        });
+
+        closeBtns.forEach((closeBtn) => {
+            closeBtn.addEventListener('click', () => {
+                popupViews.forEach((popupView) => {
+                    popupView.classList.remove('active');
+                });
+            });
+        });
+    </script>
+</body>
 
 {% endblock content %}
