--- a/static/css/main-page.css
+++ b/static/css/main-page.css
@@ -86,12 +86,18 @@ body.dark{
 	align-items: center;
 }
 
-.sidebar li:first-child{
-	margin-top: 20px;
+.sidebar li.basic:first-child{
+	margin-top: 3vh;
+	margin-bottom: 3vh;
 }
 
-.sidebar li:nth-child(4){
-	margin-top: 70px;
+
+.sidebar li.basic:nth-child(5){
+	margin-top: 4vh;
+}
+
+.sidebar li:first-child.basic .icon{
+	font-size: 2.7vh;
 }
 
 .sidebar li .icon{
@@ -423,4 +429,25 @@ body.dark .rating-star{
 	font-size: 2.3vh;
 	float: right;
 	color: rgb(210, 178, 0);
+}
+
+.register .panel-view {
+    z-index: 2;
+    background: rgba(255, 255, 255, 0.5);
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    opacity: 0;
+    visibility: hidden;
+    transition: opacity 0.3s ease, visibility 0.3s ease;
+}
+  
+ .register .panel-view.active {
+    opacity: 1;
+    visibility: visible;
 }
