--- a/store/templates/store/main.html
+++ b/store/templates/store/main.html
@@ -35,6 +35,15 @@
 		<div class="menu-bar">
 			<div class="menu">
 				<ul class="menu-links">
+					<li class="nav-link basic">
+							{% if request.user.id is None %}
+							<i class='bx bx-user-x icon' ></i>
+							<span class="text nav-text">Köszöntünk<br><strong>Vendégfelhasználó</strong></span>
+							{% else %}
+							<i class='bx bx-user-check icon'></i>
+							<span class="text nav-text">Köszöntünk<br><strong>{{request.user}}</strong></span>
+							{% endif %}
+					</li>
 					<li class="nav-link">
 						<a href="{% url 'home' %}">
 							<i class='bx bx-home-alt icon'></i>
@@ -53,7 +62,7 @@
 							<span class="text nav-text">Kosár</span>
 						</a>
 					</li>
-					<li class="nav-link">
+					<li class="nav-link basic">
 						<a href="">
 							<i class='bx bx-conversation icon' ></i>
 							<span class="text nav-text">Fórum</span>
@@ -85,13 +94,13 @@
 						<li class="nav-link">
 							<a href="{% url 'register' %}">
 								<i class='bx bx-log-in icon'></i>
-								<span class="text nav-text">Regisztráció</span>
+								<span class="text nav-text">Regisztráció/<br>Bejelentkezés</span>
 							</a>
 						</li>
 						<li class="nav-link">
-							<a href="{% url 'login' %}">
+							<a href="{% url 'logout' %}">
 								<i class='bx bx-log-out icon'></i>
-								<span class="text nav-text">Bejelentkezés</span>
+								<span class="text nav-text">Kijelentkezés</span>
 							</a>
 						</li>
 						<li class="mode nav-link">
@@ -105,7 +114,6 @@
 								<div class="toggle-switch">
 									<span class="switch"></span>
 								</div>
-
 						</li>
 					</ul>
 				</div>
