--- a/store/templates/store/register.html
+++ b/store/templates/store/register.html
@@ -2,7 +2,8 @@
 {% load static %}
 {% block content %}
 <link rel="stylesheet" href="{% static 'css/register.css' %}">
-<h5>Regisztráció</h5>
+
+
 
 <div class="container h-100">
     <div class="d-flex justify-content-center h-100">
@@ -40,30 +41,31 @@
                     </div>
 
                        <div class="d-flex justify-content-center mt-3 login_container">
-                         <input class="btn login_btn" type="submit" value="Register Account">
+                         <input class="btn login_btn" type="submit" value="Regisztráció">
                        </div>
                 </form>
             </div>
-    
+
             <div class="mt-4">
                 <div class="d-flex justify-content-center links">
-                    Already have an account? <a href="{% url 'login' %}" class="ml-2">Login</a>
+                    Van már meglévő fiókod? <a href="{% url 'login' %}" class="ml-2">Bejelentkezés</a>
                 </div>
             </div>
         </div>
     </div>
 </div>
 <script>
-                    /* Because i didnt set placeholder values in forms.py they will be set here using vanilla Javascript
+
+    /* Because i didnt set placeholder values in forms.py they will be set here using vanilla Javascript
     //We start indexing at one because CSRF_token is considered and input field 
      */
 
     //Query All input fields
     var form_fields = document.getElementsByTagName('input')
-    form_fields[1].placeholder='Username..';
-    form_fields[2].placeholder='Email..';
-    form_fields[3].placeholder='Enter password...';
-    form_fields[4].placeholder='Re-enter Password...';
+    form_fields[1].placeholder='Felhasználónév';
+    form_fields[2].placeholder='Email cím';
+    form_fields[3].placeholder='Jelszó';
+    form_fields[4].placeholder='Jelszó újra';
 
 
     for (var field in form_fields){	
